# tmail

./: .gitignore  .gitmodules  Cargo.toml  build.rs  index.html
client/: index.html
client/data/: command.json  contact.json
client/elements/cli/: cli.html  cli.js  store.js
client/elements/email/: email.html  email.js
client/js/: lunr.min.js  script.js  store.js  sync.js
client/js/cli/: cli.js  cmd.js  view.js
client/js/store/: store.js  sugestions.js
client/js/store/data/: contacts.json
elements/cli/: cli.html  cli.js  command.js
elements/email/: email.html
js/: script.js  store.js  sync.js
src/: jshandler.rs  main.rs  requestpath.rs  server.rs
src/client/: index.html  lib  sys
src/client/js/: console.js  script.js  view.js
src/client/js/cli/: cli.js  parser.js
src/client/js/cmd/: cmd.js  store.js  view.js
src/client/js/hud/: hud.js  store.js  view.js
src/client/js/store/: store.js  sync.js
src/client/lib/: libjs  libweb
utils/transpiler/: package.json  transpiler.js
