[package]

name = "tmail"
version = "0.0.1"
authors = ["Alexander Seppälä <alex@timot.se>"]
build = "./build.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
conduit-mime-types = "~0.5"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http.git"

[dependencies.time]
git = "https://github.com/rust-lang/time.git"
